analysis/low-level-api-fir/testData/getOrBuildFir/invalidCode/contextParameterOnErrorPrimaryConstructor.kt
// LOOK_UP_FOR_ELEMENT_OF_TYPE: KtTypeReference

class Clazz
context(c: <expr>Clazz</expr>){}
